--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "compile:sass": "node-sass public/sass/main.scss public/css/style.css -w"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/kellybarber/Schmedtmann-Natours#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "node-sass": "^4.9.2",
     "nodemon": "^1.18.3"
   }
 }
