--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "live": "nodemon server.js",
     "compile:sass": "node-sass public/sass/main.scss public/css/style.css -w"
   },
   "repository": {
@@ -20,7 +19,9 @@
   },
   "homepage": "https://github.com/kellybarber/Schmedtmann-Natours#readme",
   "dependencies": {
+    "browser-sync": "^2.24.6",
     "express": "^4.16.3",
+    "live-server": "^1.2.0",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3"
   }
